--- a/src/env/Project.toml
+++ b/src/env/Project.toml
@@ -10,6 +10,7 @@ GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
 GridapODEs = "55e38337-5b6e-4c7c-9cfc-e00dd49102e6"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
+ImageMagick = "6218d12a-5da1-5696-b52f-db25d2ecc6d1"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
